--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,34 @@
         android:theme="@style/Theme.Android_mentalhealth_app"
         tools:targetApi="31">
         <activity
+            android:name=".patient.PatientHomepageActivity"
+            android:exported="false"
+            android:label="@string/title_activity_patient_homepage"
+            android:theme="@style/Theme.Android_mentalhealth_app" />
+        <activity
+            android:name=".patient.PatientLoginActivity"
+            android:exported="false"
+            android:label="@string/title_activity_patient_login"
+            android:theme="@style/Theme.Android_mentalhealth_app" />
+        <activity
+            android:name=".ui.login.PatientLoginActivity"
+            android:exported="false"
+            android:label="@string/title_activity_patient_login" />
+        <activity
+            android:name=".RegisterActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.login.Register"
+            android:exported="false"
+            android:label="@string/title_activity_register" />
+        <activity
+            android:name=".ui.login.signup"
+            android:exported="false"
+            android:label="@string/title_activity_signup" />
+        <activity
+            android:name=".LoginActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
